# ONNX-Runtime-Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mcgs.sln
mcgs/: encoder.cc  main.cc  mcgs.vcxproj  mcgs.vcxproj.filters  network.cc  network.h  node.cc  node.h  packages.config  policy.h  position.cc  position.h  search.cc  search.h  types.cc  types.h
src/: CMakeLists.txt  encoder.cc  encoder.h  main.cc  network.cc  network.h  node.cc  node.h  position.cc  position.h  search.cc  search.h  tables.cc  tables.h  types.cc  types.h
